--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "mocha 'test/**'",
     "test-single": "mocha ./test/$npm_config_name.js",
     "version-bump": "git commit -am \"Version bump to $(npm version patch | cut -c 2-)\"",
-    "build:esm": "rm -rf esm && tsc -p tsconfig.esm.json",
-    "build:umd": "rm -rf umd && webpack --config=webpack.umd.js",
+    "build:esm": "rimraf esm && tsc -p tsconfig.esm.json",
+    "build:umd": "rimraf umd && webpack --config=webpack.umd.js",
     "build": "npm run lint && npm run build:umd && npm run build:esm",
     "documentMD": "npx typedoc --plugin typedoc-plugin-markdown --out docs/md",
     "document": "npx typedoc --out docs/default",
@@ -48,6 +48,7 @@
     "eslint": "^8.57.0",
     "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.4.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.0",
     "typedoc-plugin-markdown": "^3.13.6",
